[package]
authors = ["Andre Bogus <andre.bogus@ankordata.de>"]
description = "A crate with some types to allow indexed arenas with small memory footprint"
edition = "2018"
keywords = ["arena"]
license = "MIT OR Apache-2.0"
name = "compact_arena"
version = "0.3.0"
repository = "https://github.com/llogiq/compact_arena"
categories = ["memory-management"]

[features]
uninit = []
alloc = []
default = ["alloc"]
